src/styles.css
.menu {
    width: 100%;
    display: flex;
    justify-content: space-around;
    padding: 1rem;
    background-color: #A4C2F4;
}

.menu .menu__item{
    color: #336699;
}

.menu .menu__item:hover{
    cursor: pointer;
}

.menu .menu__item--is-active{
    text-decoration: underline;
    font-weight: 400;
}

